# PlatinumSrc

./: .gitattributes  .gitignore  Makefile  README.md  TODO.md  build.sh  buildmodules.sh  buildrelease.sh  cleanrelease.sh  mkrelease.sh  quickbuild.sh  updategladusage.sh  updatever.sh  util.sh
docs/: 3d models (p3m).txt  3d models.txt  databases (pkd).txt  default config.txt  directories.txt  entities.txt  example material.txt  file archives (paf).txt  file archives (pfa).txt  filesystem layout.txt  game config.txt  game dir tree.txt  map entities.txt  map extensions.txt  map projects (pmp).txt  maps (pmf).txt  maps.txt  materials.txt  mod config.txt  network protocol.txt  pbasic.txt  pmf.txt  resource paths.txt  text map projects (pmt).txt  textures (ptf).txt  tracker music (ptm).txt  tracker music.txt
engine/: config.example.cfg
engine/config/: config.cfg
engine/themes/: default.txt
icons/: engine.mr  engine.xpr
internal/engine/: config.cfg  icon.xpr
src/: debug.h  glue.c  glue.h  logging.c  logging.h  platform.h  version.c  version.h  winver.rc
src/cglm/: cglm.h
src/engine/: main.c  renderer.c  renderer.h  statestack.h
src/glad/: gl.c  gl.h  gl.h.REMOVED.git-id  glad.c
src/lz4/: lz4cb.c  lz4cb.h  lz4ds.c  lz4ds.h  lz4file.c  lz4frame.c
src/miniaudio/: miniaudio.c  miniaudio.h.REMOVED.git-id  miniaudio_libvorbis.h
src/minimp3/: minimp3.c  minimp3.h  minimp3_ex.h
src/pl_mpeg/: pl_mpeg.h
src/psrc/: 3dsver.rsf  arg.h  attribs.h  base64.c  base64.h  crc.c  (+41 more)
tools/: Makefile  README.txt  common.mk
tools/projects/android/app/jni/: CMakeLists.txt
(+260 files in other folders)
